0.13.2.AP (PRE-RELEASE):
-----------------------
- Adds `TextHelp` Feature
  * Uses complementary text colours to improve legibility
  * Can be disabled using a new `decline_texthelp` configuration token
    - Only when using a custom title banner
    - Always on when using the default title banner
- Adds `IconRowMove` Feature
  * Allows repositioning the icon row position on the RefindPlus screen
    - Sometimes needed when icons block parts of custom banners
  * Base position can be specified using a new `icon_row_move` configuration token
- Adds `IconRowTune` Feature
  * Allows adjustments to the `IconRowMove` position
  * Offset value can be specified using a new `icon_row_tune` configuration token
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token
  * This option is currently always disabled on Apple firmware
- Adds `RescanDXE` Feature
  * Controls scanning for newly revealed DXE drivers when connecting handles
    - Switch on or off with a new `disable_rescan_dxe` configuration token
  * This was previously done by default but may negatively impact loading speed
  * Should only be activated when specifically required
    - Should not be required on most firmware
  * This option is currently always disabled on Apple firmware
- Adds `DriverPriority` Feature
  * Asigns a higher priority to drivers loaded by RefindPlus
  * Ensures that such are loaded when other similar drivers exist (mainly in the firmware)
  * Currently tied to the `RansomDrives` Feature and only activated when that feature is active
- Adds `HaltSeconds` Function
  * Works as `PauseSeconds` does, but does not terminate on keypress
- Fixes Unicode Collation
  * Now checks for and uses Unicode Collation Protocol instances that support English